[gd_scene load_steps=8 format=2]

[ext_resource path="res://demo-assets/PNG/Other/doorOpen_top.png" type="Texture" id=1]
[ext_resource path="res://demo-assets/PNG/Other/doorRed_top.png" type="Texture" id=2]
[ext_resource path="res://scripts/Door.gd" type="Script" id=3]
[ext_resource path="res://assets/art-assets/UI/prompt.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 31.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88, 41 )

[node name="Door" type="Area2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 1, 1.9375 )
frames = SubResource( 1 )
animation = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="NearDoor" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearDoor"]
shape = SubResource( 3 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0, -75 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="body_entered" from="NearDoor" to="." method="_on_NearDoor_body_entered"]
[connection signal="body_exited" from="NearDoor" to="." method="_on_NearDoor_body_exited"]
